@@ -1,3 +1,12 @@
+missing
+mkinstalldirs
+INSTALL
+depcomp
+install-sh
+NEWS
+AUTHORS
+stamp-*
+Makefile.in
 .deps
 configure
 make.common
