@@ -7,6 +7,7 @@ index.html
 labels.pl
 WARNINGS
 Makefile
+Makefile.in
 oprofile.1
 oprofile
 oprofile.junk
