@@ -3,3 +3,4 @@
 oprof_start
 oprof_start.moc.cpp
 Makefile
+Makefile.in
