@@ -3,3 +3,4 @@ oprof_start.base.cpp
 oprof_start.base.moc.cpp
 oprof_start.base.h
 Makefile
+Makefile.in
