@@ -1,4 +1,5 @@
 abi_test
 op_import
 Makefile
+Makefile.in
 .deps
