@@ -2,3 +2,4 @@
 oprof_report
 oprof_report.moc.cpp
 Makefile
+Makefile.in
