@@ -3,3 +3,4 @@ oprof_report.base.cpp
 oprof_report.base.moc.cpp
 oprof_report.base.h
 Makefile
+Makefile.in
